# vr_hand_gaze_annotation

./: README.md
Assets/Materials/: Black.mat  RedDot.mat  SphereHoverDefault.mat
Assets/Models/: icosphere.fbx
Assets/Prefabs/: BigSphere.prefab  CurvedCanvasDebugArea.prefab  EyeInteractable.prefab  MenuItem.prefab  PointCloudSphere.prefab  RoomEnvironment.prefab
Assets/Scenes/: EyeTracking.unity
Assets/Scripts/: BigSphereController.cs  ChangeText.cs  CheckDistance.cs  CollisionDetection.cs  EyeInteractable.cs  EyeTrackingRay.cs  GameController.cs  InteractableRayController.cs  LabelToolManager.cs  MenuController.cs  MenuItemController.cs  ModeController.cs  ReshapeCube.cs  SetBoxes.cs
Assets/Scripts/PointCloudImport/: PointCloudAABBController.cs  PointCloudEyeInteractable.cs  PointCloudGenerator.cs  PointCloudInfo.cs  PointCloudSphere.cs
Assets/Scripts/PointCloudImport/Shaders/: PointCloud.shader
Assets/rviz_cloud_annotation_plugin/: CMakeLists.txt
Assets/rviz_cloud_annotation_plugin/src/: point_neighborhood_search.cpp  rviz_cloud_annotation_c_interface.cpp  rviz_cloud_annotation_c_interface.h  rviz_cloud_annotation_plugin.cpp  rviz_cloud_annotation_points.cpp  rviz_cloud_annotation_points_io.cpp  rviz_cloud_annotation_test.cpp
